--- a/templates/index.html
+++ b/templates/index.html
@@ -44,77 +44,89 @@
     <small>Video, Survey</small>
   </div> -->
 
-  <div id="card9" class="card draggable center">
+  <!-- <div id="card9" class="card draggable center">
     <em>Dolphin Accelerator</em><br/><br/>
     <iframe src="https://player.vimeo.com/video/186337332?title=0&byline=0&portrait=0" width="275" height="155" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><br/><br/>
     <small>Video</small>
-  </div>
+  </div> -->
 
-  <div id="card10" class="card draggable center">
-    <em>Quitting</em><br/><br/><br/><br/>
+  <div id="card13" class="card draggable center">
+    <em><span class="title shake-slow shake-constant">Quitting</span></em><br/><br/><br/><br/>
     <iframe src="https://player.vimeo.com/video/200595854?title=0&byline=0&portrait=0" width="275" height="155" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><br/><br/>
     <small>Video, Commissioned Performance</small>
   </div>
 
-  <div id="card11" class="card draggable center">
-    <em>WWWORK</em><br/><br/><br/><br/>
+   <div id="card12" class="card draggable center">
+    <em><span class="title shake-slow shake-constant">WWWORK</span></em><br/><br/><br/><br/>
     <iframe src="https://player.vimeo.com/video/202841346?title=0&byline=0&portrait=0" width="275" height="155" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><br/><br/>
     <small>Video Essay</small>
   </div>
 
-  <div id="card12" class="card draggable center futureofworkbook">
-    <em>The Future of Work</em><br/><br/>
+  <div id="card11" class="card draggable center futureofworkbook">
+    <em><span class="title shake-slow shake-constant">The Future of Work</span></em><br/><br/>
     <a href="http://v2.nl/archive/articles/the-future-of-work" target="_blank"><img src="img/futureofworkbook.jpg" class="img-responsive" alt="The Future of Work book cover"></a><br/>
     <small>Available as <a href="http://bit.ly/futureofwork-pdf" target="_blank">PDF</a>, <a href="http://bit.ly/futureofwork-epub" target="_blank">ePub</a>, or in <a href="http://bit.ly/futureofwork-print" target="_blank">print</a>.</small>
-  </div>
+  </div> 
 
-  <div id="card13" class="card draggable center">
-    <!-- <img class="new" src="img/new.gif"/> -->
+<!--   <div id="card13" class="card draggable center">
     <em>After Work</em><br/><br/><br/><br/>
     <iframe src="https://player.vimeo.com/video/222723623?title=0&byline=0&portrait=0" width="275" height="155" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><br/><br/>
     <small>Design <a href="futuregenerator.html"> the future</a>.</small>
-  </div>
+  </div> -->
 
   <div id="card14" class="card draggable center">
-    <img class="new" src="img/new.gif"/>
-    <em>Eternal Boy Playground</em><br/><br/>
+<!--     <img class="new" src="img/new.gif"/> -->
+    <em><span class="title shake-slow shake-constant">Eternal Boy Playground</span></em><br/><br/>
     <a href="https://tttelematiccc.com/" target="_blank"><img class="img-responsive" src="img/eternal.jpg"></a><br/>
     <small>Solo Exhibition<br/><a href="https://tttelematiccc.com/" target="_blank">Telematic</a><br/>323 10th St. (at Folsom)<br/>San Francisco, CA<br/>Dec 15 2018 - Feb 2 2019<br/><span class="closing shake-little shake-constant">Closing Reception: Feb 2nd, 4-6pm</span></small>
   </div>
 
-
+  <div id="card10" class="card draggable center">
+    <span class="title shake-slow shake-constant">Contact</span>
+    <br/><br/><br/><br/>
+    <p class="email">
+    <img src="img/mail.gif">
+    <br/><br/><br/>
+    <a href="mailto:anxioustomake@gmail.com?subject=Anxious to communicate"> anxioustomake@gmail.com</a><br/>
+    <i class="fa fa-twitter"></i><a href="https://twitter.com/anxioustomake" target="_blank"> @anxioustomake</a> <br/> 
+    <i class="fa fa-twitter"></i><a href="https://twitter.com/Resonator11" target="_blank"> Emily</a> | 
+    <i class="fa fa-instagram"></i><a href="https://instagram.com/queerai" target="_blank"> Emily</a> |
+    <i class="fa fa-twitter"></i><a href="https://twitter.com/whatliat" target="_blank"> Liat</a> |
+    <i class="fa fa-instagram"></i><a href="https://instagram.com/whatliat" target="_blank"> Liat</a>
+    </p>
+  </div>
 
   <!-- END: CARDS ROW 1 -->
 
   <!-- START: CARDS ROW 2 -->
 
   <div id="card1" class="card draggable center">
-    Store<br/><br/><br/>
+    <span class="title shake-slow shake-constant">Store</span><br/><br/><br/>
     <a href="store.html" target="_blank"><img class="img-responsive" src="img/store-pillow.jpg"></a><br/>
     <small></small>
   </div>
 
   <div id="card2" class="card draggable center">
-    Surveys<br/><br/>
+    <span class="title shake-slow shake-constant">Surveys</span><br/><br/>
     <a href="quizzes.html"><img class="img-responsive" src="img/quiz.jpg"></a>
   </div>
 
   <div id="card3" class="card draggable center downloads">
-    Downloads<br/><br/><br/><br/>
+    <span class="title shake-slow shake-constant">Downloads</span><br/><br/><br/><br/>
     <a href="downloads.html"><img class="img-responsive" src="img/cloud2.png"></a>
   </div>
   
   <div id="card4" class="card draggable center generators">
-    Generators<br/><br/><br/><br/>
+    <span class="title shake-slow shake-constant">Generators</span><br/><br/><br/><br/>
     <a href="generators.html"><img class="img-responsive" src="img/database.jpg"></a>
   </div>
   <div id="card5" class="card draggable center commissions">
-    Commissions<br/><br/><br/><br/>
+    <span class="title shake-slow shake-constant">Commissions</span><br/><br/><br/><br/>
     <a href="commissions.html"><img class="img-responsive" src="img/document.jpg"></a>
   </div>
 
   <div id="card6" class="card draggable news">
-    <div class="center">News</div><br/>
+    <div class="center"><span class="title shake-slow shake-constant">News</span></div><br/>
     <small>
     <strong>1.2019</strong> <em><a href="https://www.kqed.org/arts/13849586/crypto-bros-eternal-boy-playground-anxious-to-make" target="_blank">Crypto-Bros Beware: These Artists Aren’t Buying Your Version of Utopia</a></em> review of <em>Eternal Boy Playground</em> by Blythe Sheldon, KQED Arts
     <br/><br/>
@@ -140,7 +152,7 @@
     <br/><br/>
     <strong>7.2018</strong> <em>After Work</em>, <a href="https://lafazdelatierravideo.wordpress.com/" target="_blank">La Faz de la Tierra</a>, Espacio Pla, Buenos Aires, Argentina. <em>After Work</em> will be exhibited together with 35 other videos in a show that reboots Eduardo Pla’s video installation Videomundo Virtual. (note: Videomundo Virtual was an artistic production for the 50th anniversary of the UN in 1995, and featured a sphere-shaped structure with six TV sets.)
     <br/><br/>
-    <strong>6.2018</strong> <em>anxioustomake.ga</em>, <a href="https://crit.hangar.org/toolbox/" target="_blank">Artistic Approaches to the Interface </a>, Hangar Centre for Art Research and Production. Our website is featured as part of the toolkit in Section 4: Artistic Approaches to the Interface
+    <strong>6.2018</strong> <a href="https://crit.hangar.org/toolbox/" target="_blank">Artistic Approaches to the Interface </a>, Hangar Centre for Art Research and Production. Our website is featured as part of the toolkit in Section 4: Artistic Approaches to the Interface
     <br/><br/>
     <strong>2.2018</strong> <em>How to Make Yourself into a Commissioning Body in 5 Easy Steps by Anxious to Make </em>, <a href="http://networkcultures.org/entreprecariat/how-to-make-yourself-into-a-commissioning-body/" target="_blank">Entreprecariat </a>, Institute of Network Cultures
     <br/><br/>
@@ -239,7 +251,7 @@
     <br/><br/>
     <strong>7.2018</strong> <em>After Work</em>, <a href="https://lafazdelatierravideo.wordpress.com/" target="_blank">La Faz de la Tierra</a>, Espacio Pla, Buenos Aires, Argentina. <em>After Work</em> will be exhibited together with 35 other videos in a show that reboots Eduardo Pla’s video installation Videomundo Virtual. (note: Videomundo Virtual was an artistic production for the 50th anniversary of the UN in 1995, and featured a sphere-shaped structure with six TV sets.)
     <br/><br/>
-    <strong>6.2018</strong> <em>anxioustomake.ga</em>, <a href="https://crit.hangar.org/toolbox/" target="_blank">Artistic Approaches to the Interface </a>, Hangar Centre for Art Research and Production. Our website is featured as part of the toolkit in Section 4: Artistic Approaches to the Interface
+    <strong>6.2018</strong> <a href="https://crit.hangar.org/toolbox/" target="_blank">Artistic Approaches to the Interface </a>, Hangar Centre for Art Research and Production. Our website is featured as part of the toolkit in Section 4: Artistic Approaches to the Interface
     <br/><br/>
     <strong>2.2018</strong> <em>How to Make Yourself into a Commissioning Body in 5 Easy Steps by Anxious to Make </em>, <a href="http://networkcultures.org/entreprecariat/how-to-make-yourself-into-a-commissioning-body/" target="_blank">Entreprecariat </a>, Institute of Network Cultures
     <br/><br/>
